[gd_scene load_steps=7 format=3 uid="uid://dqaqx8pyws4b7"]

[ext_resource type="Theme" uid="uid://iio8g86nc5cm" path="res://Themes/main_theme.tres" id="1_olma7"]
[ext_resource type="Resource" uid="uid://b1pilxdd7hjki" path="res://Test/test_action_array.tres" id="2_reqm2"]
[ext_resource type="Script" path="res://Menu/InputRemapping/controls.gd" id="3_f54s7"]
[ext_resource type="PackedScene" uid="uid://dpnemb3edm48c" path="res://Menu/InputRemapping/input_remap.tscn" id="4_xu8u6"]
[ext_resource type="StyleBox" uid="uid://sp7kecnp3wn2" path="res://Themes/panel.tres" id="4_yisvr"]
[ext_resource type="PackedScene" uid="uid://bwoqyjwe64ymg" path="res://Menu/Menu Components/Menu Buttons/variable_menu_transition.tscn" id="6_ykx7t"]

[node name="InputRemapper" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_f54s7")
action_array = ExtResource("2_reqm2")
menu_type = 3

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0705882, 0.160784, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.0
offset_top = 56.0
offset_right = 86.0
offset_bottom = 79.0
grow_horizontal = 2
theme = ExtResource("1_olma7")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Controls"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 222
theme_override_constants/margin_top = 132
theme_override_constants/margin_right = 222
theme_override_constants/margin_bottom = 120

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_olma7")
theme_override_styles/panel = ExtResource("4_yisvr")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24

[node name="InputRemapContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InputRemap" parent="MarginContainer/Panel/MarginContainer/InputRemapContainer" instance=ExtResource("4_xu8u6")]
layout_mode = 2

[node name="VariableMenuTransition" parent="." instance=ExtResource("6_ykx7t")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -104.0
offset_right = 90.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="ResetButton" type="Button" parent="."]
layout_mode = 0
offset_left = 852.0
offset_top = 616.0
offset_right = 1128.0
offset_bottom = 680.0
theme = ExtResource("1_olma7")
text = "Reset To Default"

[node name="UserWarning" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_olma7")
theme_override_font_sizes/font_size = 48
text = "Key is not available."

[node name="WarningTimer" type="Timer" parent="UserWarning"]

[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="timeout" from="UserWarning/WarningTimer" to="." method="_on_warning_timer_timeout"]
